<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">


        <TextView
            android:id="@+id/tV_Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_form"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/eT_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/eT_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/eT_UserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/eT_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/eT_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <TextView
                android:id="@+id/eT_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
               />

            <RadioButton
                android:id="@+id/rB_Male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                />

            <RadioButton
                android:id="@+id/rB_Female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"/>

        </RadioGroup>


        <EditText
            android:id="@+id/eT_Mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

        <EditText
            android:id="@+id/eT_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:autofillHints=""
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:id="@+id/tV_State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:background="@drawable/shapeemail"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textColorHighlight="@color/white"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/States"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accept Terms and Conditions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:padding="15dp"
            android:background="@drawable/shapeemail"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"/>

    </LinearLayout>

</ScrollView>