<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:padding="20dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/back"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/login"/>
    <EditText
        android:id="@+id/eT_email"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>
    <EditText android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/eT_password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:checked="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:textColor="@color/white"
                android:drawablePadding="6dp"
                android:padding="4dp"/>
        </LinearLayout>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/button_login"
        android:text="@string/login_button"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapelogin"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tV_register"
        android:text="@string/sign_up"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapesignup"
        android:textColor="@color/white"/>
    </LinearLayout>
</ScrollView>